# payments-gateway

./: Cargo.toml  README.md
migrations/: 0001_init.sql  0002_gateways_config.sql  0003_payment_events_outbox.sql  0004_gateway_metrics_history.sql  0005_scoring_config.sql  0006_scoring_affinity_tables.sql  0007_routing_decisions.sql  0008_circuit_breaker_config.sql  0009_payment_attempts.sql  0010_retry_policy.sql  0011_error_classification.sql  0012_payment_status_verification.sql  0013_experiments.sql  0014_experiment_assignments.sql  0015_experiment_results.sql  0016_bandit_state.sql  0017_webhook_subscriptions.sql
src/: config.rs  lib.rs  main.rs
src/bandit/: thompson.rs
src/circuit/: evaluator.rs  mod.rs  state.rs  store_redis.rs  transitions.rs
src/domain/: context.rs  experiment.rs  payment.rs  routing_decision.rs
src/experiments/: analyzer.rs  assigner.rs  filter.rs  mod.rs
src/gateways/: mock.rs  mod.rs  razorpay.rs
src/metrics/: aggregator.rs  amount_bucket.rs  event.rs  history_repo.rs  mod.rs  store_redis.rs  window.rs
src/repo/: bandit_repo.rs  circuit_breaker_config_repo.rs  error_classification_repo.rs  experiments_repo.rs  gateways_repo.rs  outbox_repo.rs  payment_attempts_repo.rs  payment_verification_repo.rs  payments_repo.rs  retry_policy_repo.rs  routing_decisions_repo.rs  scoring_config_repo.rs  webhook_repo.rs
src/router/: round_robin.rs
src/scoring/: engine.rs  metrics_reader.rs  mod.rs  (+1 more)
tests/: circuit_breaker.rs  phase6_retry_flow.rs  phase7_experiments.rs  product_readiness.rs  routing_decision_api.rs  scoring_engine.rs
(+19 files in other folders)
